--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -7,7 +7,7 @@
     </form>
     <ul class="nav">
       <li>
-        <%= link_to 'World Wall', '#' %>
+        <%= link_to 'Agenda', controller: 'calendar', action: 'index' %>
       </li>
       <li><a href="#">Dashboard</a></li>
       <li><a href="#">ComeToChat</a></li>
